package com.gmms;

public class Adjectives {

}