package com.gmms;

public class Nouns {

}