package com.gmms;

public class SystemDictionary {

}